# ensc351project

./: CMakeLists.txt  clock.h  server_gui.py
app/: CMakeLists.txt
app/include/: alarmClock.h  bluetooth_manager.h  clockDisplay.h  joystickInput.h  lcdManager.h  lcdTasks.h  mp3_decoder.h  mp3_decoder_advanced.h  musicStorage.h  udpServer.h
app/src/: alarmClock.c  bluetooth_manager.c  clock.c  clockDisplay.c  joystickInput.c  lcdManager.c  lcdTasks.c  main.c  mp3_decoder.c  mp3_decoder_advanced.c  musicStorage.c  udpServer.c
hal/: CMakeLists.txt
hal/include/hal/: joystick.h  lcd.h
hal/src/: joystick.c  lcd.c
